# VulkanExamples

./: .gitignore
Example_1/: CMakeLists.txt
Example_1/libs/glfw/CMake/modules/: FindVulkan.cmake
Example_1/res/shaders/: convertAll.sh  frag.spv  post_shader.frag  post_shader.vert  post_shader_frag.spv  post_shader_vert.spv  shader.frag  shader.vert  shader_frag.spv  vert.spv
Example_1/src/: CommonConstants.h  CommonDefines.h  CommonIncludes.h  Figures.h  Helpers.cpp  Helpers.h  SwapchainImageResources.h  TextureObject.h  UniformBuffer.cpp  UniformBuffer.h  UniformBufferModel.cpp  UniformBufferModel.h  UniformBufferPost.cpp  UniformBufferPost.h  Vertex.h  Vertex2D.cpp  Vertex2D.h  Vertex3D.cpp  Vertex3D.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommandPool.cpp  VulkanDescriptorPool.cpp  VulkanDescriptorPool.h  VulkanDescriptorSet.cpp  VulkanDescriptorSet.h  VulkanDescriptorSetLayout.cpp  VulkanDescriptorSetLayout.h  VulkanFence.cpp  VulkanFence.h  VulkanFrameBuffer.cpp  VulkanFrameBuffer.h  VulkanHelpers.cpp  VulkanHelpers.h  VulkanImage.cpp  VulkanImage.h  VulkanImageView.cpp  VulkanImageView.h  (+29 more)
Example_10_Multithreading/: CMakeLists.txt
Example_10_Multithreading/src/: VulkanRender.cpp  VulkanRender.h  main.cpp
Example_11_SPIRV_Reflection/: CMakeLists.txt
Example_11_SPIRV_Reflection/res/shaders/: convertAll.sh  shader.frag
Example_11_SPIRV_Reflection/src/: VulkanRender.cpp  VulkanRender.h
Example_1_Android/app/: CMakeLists.txt  build.gradle
Example_1_Android/app/src/main/: AndroidManifest.xml
Example_1_Android/app/src/main/cpp/: JNICode.cpp  Vertex.h  VulkanDevice.cpp  VulkanDevice.h  VulkanModelInfo.cpp  VulkanModelInfo.h  VulkanRenderInfo.cpp  VulkanVisualizer.cpp  VulkanVisualizer.h
Example_1_Android/gradle/wrapper/: gradle-wrapper.properties
Example_1_SimpleModel/: CMakeLists.txt
Example_1_SimpleModel/src/: CommonConstants.h  Figures.cpp  VulkanCommandBuffer.cpp  VulkanCommandPool.h  VulkanFence.cpp  VulkanImageView.h  VulkanInstance.cpp  VulkanQueuesFamiliesIndexes.cpp  VulkanRender.cpp  VulkanRenderPass.h  VulkanShaderModule.cpp  VulkanSurface.cpp  VulkanSurface.h
Example_2/app/: CMakeLists.txt  build.gradle
Example_2/app/src/main/: AndroidManifest.xml
Example_2/app/src/main/cpp/: JNICode.cpp  SupportFunctions.cpp  SupportFunctions.h  VulkanDevice.cpp  VulkanDevice.h  VulkanModelInfo.cpp  VulkanModelInfo.h  VulkanRenderInfo.cpp  VulkanRenderInfo.h  VulkanVisualizer.cpp  VulkanVisualizer.h
Example_2/app/src/main/java/com/example/devnul/vulkanexample/: MainActivity.java  VulkanDrawThread.java  VulkanSurfaceView.java
Example_2/app/src/main/res/layout/: activity_main.xml
Example_2/app/src/main/res/values/: strings.xml
Example_2/app/src/test/java/com/example/devnul/vulkanexample/: ExampleUnitTest.java
Example_2_Android/app/src/main/cpp/: JNICode.cpp  VulkanDevice.cpp  VulkanModelInfo.cpp  VulkanRenderInfo.h
Example_2_SimpleModel/: CMakeLists.txt
Example_2_SimpleModel/res/shaders/: shader.frag  shader.vert  shader_frag.spv  shader_vert.spv
Example_2_SimpleModel/src/: Vertex.h  VulkanRender.cpp  VulkanRender.h  main.cpp
Example_3_PostProcess/: CMakeLists.txt
Example_3_PostProcess/res/shaders/: convertAll.sh  model_shader.vert  post_shader.frag  post_shader.vert  post_shader_frag.spv  post_shader_vert.spv
Example_3_PostProcess/src/: CommonConstants.h  Figures.h  ModelUniformBuffer.cpp  Vertex3D.h  VulkanRender.cpp  VulkanRender.h  main.cpp
Example_4_PostProcessParallel/: CMakeLists.txt
Example_4_PostProcessParallel/res/shaders/: post_shader_frag.spv
Example_4_PostProcessParallel/src/: Vertex2D.h  Vertex3D.cpp  VulkanRender.cpp  VulkanRender.h  main.cpp
Example_5_Multisampling/: CMakeLists.txt
Example_5_Multisampling/CMake/: FindVulkan.cmake
Example_5_Multisampling/src/: CommonDefines.h  Helpers.h  VulkanRender.cpp  VulkanRender.h  main.cpp
Example_5_PostProcessDifferentQueueParallel/: CMakeLists.txt
Example_5_PostProcessDifferentQueueParallel/res/shaders/: post_shader.frag  post_shader.vert
Example_5_PostProcessDifferentQueueParallel/src/: ModelUniformBuffer.h  Vertex2D.cpp  VulkanRender.cpp  VulkanRender.h  main.cpp
Example_6_Multisampling/: CMakeLists.txt
Example_6_Multisampling/src/: VulkanRender.cpp
Example_6_Statistics/: CMakeLists.txt
Example_6_Statistics/res/shaders/: convertAll.sh
Example_6_Statistics/src/: VulkanRender.cpp  main.cpp
Example_7_Statistics/: CMakeLists.txt
Example_7_Statistics/res/shaders/: shader_vert.spv
Example_7_Statistics/src/: CommonConstants.h  VulkanRender.cpp  VulkanRender.h  main.cpp
Example_8_BufferUpdate/: CMakeLists.txt
Example_8_BufferUpdate/src/: Figures.h  VulkanRender.cpp
Example_9_DynamicUniformBuffer/: CMakeCache.txt  CMakeLists.txt
Example_9_DynamicUniformBuffer/res/shaders/: shader.frag  shader.vert  shader_frag.spv  shader_vert.spv
Example_9_DynamicUniformBuffer/src/: UniformBuffer.h  VulkanRender.cpp  VulkanRender.h
Example_BaseCode/: CMakeLists.txt
Example_BaseCode/libs/spirv_cross/: CMakeLists.txt
Example_BaseCode/libs/spirv_reflect/: CMakeLists.txt
Example_BaseCode/src/: Helpers.cpp  Helpers.h  TestDefines.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanDescriptorPool.cpp  VulkanDescriptorPool.h  VulkanDescriptorSet.cpp  VulkanDescriptorSet.h  VulkanDescriptorSetLayout.cpp  VulkanDescriptorSetLayout.h  VulkanFence.cpp  VulkanFence.h  VulkanFrameBuffer.cpp  VulkanFrameBuffer.h  VulkanHelpers.cpp  VulkanHelpers.h  VulkanImage.cpp  VulkanImage.h  VulkanImageView.h  VulkanInstance.cpp  VulkanInstance.h  VulkanLogicalDevice.cpp  VulkanLogicalDevice.h  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanQueryPool.cpp  VulkanQueryPool.h  VulkanQueue.cpp  VulkanQueue.h  VulkanQueuesFamiliesIndexes.cpp  VulkanQueuesFamiliesIndexes.h  VulkanReflection.cpp  VulkanReflection.h  (+12 more)
ShaderConverter/: .gitignore  main.py  vulkan_convertAll.sh
(+8 files in other folders)
